--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>techmag</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header>
+      <div>
+        <h1>TechMag2000</h1>
+        <p>
+         Le magazine qui explore les technologies du futur
+       </p>
+      </div>
+    </header>
+    <main>
+      <div>
+        <img 
+        src="" 
+        alt=""
+        >
+        <h2>Notre magazine</h2>
+        <p>
+          "I just knew it! Well, I wasn't gonna let you get all the credit and take 
+          all the reward. Hey, I knew there was more to you than money. Oh, no! Oh, 
+          my! Artoo! Can you hear me?""
+        </p>
+      </div>
+      <div>
+        <img 
+        src="" 
+        alt=""
+        >
+        <h2>Toujours plus de drône dans le ciel</h2>
+        <h3>Publié le <strong>10 février</strong> 2025 par James Webb</h3>
+      </div>
+    </main>
+  </body>
 </html>
