--- a/index.html
+++ b/index.html
@@ -34,8 +34,32 @@
         alt=""
         >
         <h2>Toujours plus de drône dans le ciel</h2>
-        <h3>Publié le <strong>10 février</strong> 2025 par James Webb</h3>
+        <h3>Publié le <strong>10 février</strong> 2025 par <em>James Webb</em></h3>
+        <p>
+          Your friend is quite a mercenary. I wonder if he really cares about anything...
+          or anyone. I care! So...what do you think of her, Han? I'm trying not to, kid! Good... 
+          Still, she's got a lot of spirit. I don't know, what do you think? Do you think a 
+          princess and a guy like me... No!
+        </p>
+        <div>
+          <a href="article.html">En lire plus</a>
+        </div>
+      </div>
+      <div>
+        <h2>Internet, c'était mieux avant</h2>
+        <h3>Publié le <strong>7 janvier 2025</strong> par <em>Arthur Poulas</em></h3>
+        <p>
+          Yes. Our scout ships have reached Dantooine. They found the remains of 
+          a Rebel base, but they estimate that it has been deserted for some time. 
+          They are now conducting an extensive search of the surrounding systems.
+        </p>
+        <div>
+          <a href="article.html">En lire plus</a>
+        </div>
       </div>
     </main>
+    <footer>
+      <p>eikon//2021-2022</p>
+    </footer>
   </body>
 </html>
