--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>TechMag2000</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -18,8 +18,8 @@
     <main>
       <div>
         <img 
-        src="" 
-        alt=""
+        src="img/main-magazine.jpg" 
+        alt="Photo d'un bureau avec des objets éléctroniques"
         >
         <h2>Notre magazine</h2>
         <p>
@@ -30,8 +30,8 @@
       </div>
       <div>
         <img 
-        src="" 
-        alt=""
+        src="img/main-drone.jpg" 
+        alt="Photo d'un drone dans le ciel"
         >
         <h2>Toujours plus de drône dans le ciel</h2>
         <h3>Publié le <strong>10 février</strong> 2025 par <em>James Webb</em></h3>
@@ -46,6 +46,10 @@
         </div>
       </div>
       <div>
+        <img 
+        src="img/main-ordinateur.jpg" 
+        alt="Photo d'un ordinateur sur un bureau"
+        >
         <h2>Internet, c'était mieux avant</h2>
         <h3>Publié le <strong>7 janvier 2025</strong> par <em>Arthur Poulas</em></h3>
         <p>
