--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
     </header>
     <main>
       <div>
-        <img 
-        src="img/main-magazine.jpg" 
-        alt="Photo d'un bureau avec des objets éléctroniques"
-        >
         <h2>Notre magazine</h2>
         <p>
           "I just knew it! Well, I wasn't gonna let you get all the credit and take 
@@ -29,10 +25,6 @@
         </p>
       </div>
       <div>
-        <img 
-        src="img/main-drone.jpg" 
-        alt="Photo d'un drone dans le ciel"
-        >
         <h2>Toujours plus de drône dans le ciel</h2>
         <h3>Publié le <strong>10 février</strong> 2025 par <em>James Webb</em></h3>
         <p>
@@ -41,21 +33,38 @@
           Still, she's got a lot of spirit. I don't know, what do you think? Do you think a 
           princess and a guy like me... No!
         </p>
+        <figure>
+          <img 
+          src="img/main-drone.jpg" 
+          alt="Photo d'un drone dans le ciel"
+          >
+          <figcaption>
+            Le drone est-il le nouveau meilleur ami de l'homme?
+          </figcaption>
+        </figure>
         <div>
           <a href="article.html">En lire plus</a>
         </div>
       </div>
       <div>
-        <img 
-        src="img/main-ordinateur.jpg" 
-        alt="Photo d'un ordinateur sur un bureau"
-        >
         <h2>Internet, c'était mieux avant</h2>
         <h3>Publié le <strong>7 janvier 2025</strong> par <em>Arthur Poulas</em></h3>
         <p>
           Yes. Our scout ships have reached Dantooine. They found the remains of 
-          a Rebel base, but they estimate that it has been deserted for some time. 
-          They are now conducting an extensive search of the surrounding systems.
+          a Rebel base, but they estimate that it has been deserted
+        </p>
+        <figure>
+          <img 
+            src="img/main-ordinateur.jpg" 
+            alt="Photo d'un ordinateur sur un bureau"
+          >
+          <figcaption>
+            Au moins on peut toujours changer son fond d'écran
+          </figcaption>
+        </figure>
+        <p> 
+          For some time. They are now conducting an extensive search of the 
+          surrounding systems.
         </p>
         <div>
           <a href="article.html">En lire plus</a>
