--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechMag2000</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,100&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <div>
-        <h1>TechMag2000</h1>
-        <p>
-         Le magazine qui explore les technologies du futur
-       </p>
-      </div>
+      <h1>TechMag<em>2000</em></h1>
+      <p class="sous-titre">
+        Le magazine qui explore les technologies du futur
+      </p>
     </header>
     <main>
-      <div>
+      <div class="presentation">
         <h2>Notre magazine</h2>
         <p>
           "I just knew it! Well, I wasn't gonna let you get all the credit and take 
@@ -24,9 +25,10 @@
           my! Artoo! Can you hear me?""
         </p>
       </div>
-      <div>
-        <h2>Toujours plus de drône dans le ciel</h2>
-        <h3>Publié le <strong>10 février</strong> 2025 par <em>James Webb</em></h3>
+      <article>
+        <h1>Toujours plus de drône dans le ciel</h1>
+        <p class="article-meta">Publié le <span class="date">10 février</span> 2025 par 
+          <span class="auteur">James Webb</span>></p>
         <p>
           Your friend is quite a mercenary. I wonder if he really cares about anything...
           or anyone. I care! So...what do you think of her, Han? I'm trying not to, kid! Good... 
@@ -42,13 +44,14 @@
             Le drone est-il le nouveau meilleur ami de l'homme?
           </figcaption>
         </figure>
-        <div>
+        <button>
           <a href="article.html">En lire plus</a>
-        </div>
-      </div>
-      <div>
-        <h2>Internet, c'était mieux avant</h2>
-        <h3>Publié le <strong>7 janvier 2025</strong> par <em>Arthur Poulas</em></h3>
+        </button>>
+      </article>>
+      <article>
+        <h1>Internet, c'était mieux avant</h2>
+        <p class="article-meta">Publié le <strong>7 janvier 2025</strong> par 
+          <em>Arthur Poulas</em></p>
         <p>
           Yes. Our scout ships have reached Dantooine. They found the remains of 
           a Rebel base, but they estimate that it has been deserted
@@ -66,10 +69,10 @@
           For some time. They are now conducting an extensive search of the 
           surrounding systems.
         </p>
-        <div>
+        <button>
           <a href="article.html">En lire plus</a>
-        </div>
-      </div>
+        </button>>
+      </article>>
     </main>
     <footer>
       <p>eikon//2021-2022</p>
