--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </div>
       <article>
         <h1>Toujours plus de drône dans le ciel</h1>
-        <p class="article-meta">Publié le <span class="date">10 février</span> 2025 par 
-          <span class="auteur">James Webb</span>></p>
-        <p>
+        <p class="article-meta">Publié le <span class="date">10 février 2025</span> par 
+          <span class="auteur">James Webb</span></p>
+        <p class="text">
           Your friend is quite a mercenary. I wonder if he really cares about anything...
           or anyone. I care! So...what do you think of her, Han? I'm trying not to, kid! Good... 
           Still, she's got a lot of spirit. I don't know, what do you think? Do you think a 
@@ -46,13 +46,13 @@
         </figure>
         <button>
           <a href="article.html">En lire plus</a>
-        </button>>
-      </article>>
+        </button>
+      </article>
       <article>
-        <h1>Internet, c'était mieux avant</h2>
-        <p class="article-meta">Publié le <strong>7 janvier 2025</strong> par 
-          <em>Arthur Poulas</em></p>
-        <p>
+        <h1>Internet, c'était mieux avant</h1>
+        <p class="article-meta">Publié le <span class="date">7 janvier 2025</span> par 
+          <span class="auteur">Arthur Poulas</span></p>
+        <p class="text">
           Yes. Our scout ships have reached Dantooine. They found the remains of 
           a Rebel base, but they estimate that it has been deserted
         </p>
@@ -65,17 +65,18 @@
             Au moins on peut toujours changer son fond d'écran
           </figcaption>
         </figure>
-        <p> 
-          For some time. They are now conducting an extensive search of the 
+        <p class="text"> 
+          For some time. They
+           are now conducting an extensive search of the 
           surrounding systems.
         </p>
         <button>
           <a href="article.html">En lire plus</a>
-        </button>>
+        </button>
       </article>>
     </main>
     <footer>
-      <p>eikon//2021-2022</p>
+      <p>eikon // 2021-2022</p>
     </footer>
   </body>
 </html>
