article.html fini
fini html article

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <button>
           <a href="article.html">En lire plus</a>
         </button>
-      </article>>
+      </article>
     </main>
     <footer>
       <p>eikon // 2021-2022</p>
