--- a/article.html
+++ b/article.html
@@ -23,12 +23,12 @@
           Publié le 10 février 2025 par James Webb
         </p>
       </div>
-      <article>
+      <article class="article-page">
         <figure>
-          <img class="article-img"
+          <img 
           src="img/ecran.jpg" 
           alt="Image d'un écran tactile.">
-          <figcaption>
+          <figcaption class="article-figcaption">
             Vivre connecté,365 jours par an.
           </figcaption>
         </figure>
@@ -39,11 +39,11 @@
           assault. A small one-man fighter should be able to penetrate the outer defense.
         </p>
         <figure>
-          <img class="article-img"
+          <img 
           src="img/appareil-photo.jpg" 
           alt="Photo de matérielle de photographe."
           >
-          <figcaption>
+          <figcaption class="article-figcaption">
             The viedéographer 2.0 toolkit.
           </figcaption>
         </figure>
@@ -54,10 +54,10 @@
           Red Eleven standing by
         </p>
         <figure>
-          <img class="article-img"
+          <img
           src="img/electronique.jpg" 
           alt="Photo de matérielle éléctronique.">
-          <figcaption>
+          <figcaption class="article-figcaption">
             Welding for better repair.
           </figcaption>
         </figure>
