--- a/article.html
+++ b/article.html
@@ -66,7 +66,7 @@
           Didn't we just leave this party? What kept you? We ran into some old friends. 
           Is the ship all right?
         </p>
-        <button class="article-button">
+        <button class="button">
           <a href="index.html">Retour aux article</a>
         </button>
       </article>
