Correction nom de la classe du text

--- a/article.html
+++ b/article.html
@@ -33,7 +33,7 @@
           </figcaption>
         </figure>
         <h1>Toujours plus de drône dans le ciel</h1>
-        <p class="article-text">
+        <p class="text">
           The battle station is heavily shielded and carries a firepower greater 
           than half the star fleet. It's defenses are designed around a direct large-scale 
           assault. A small one-man fighter should be able to penetrate the outer defense.
@@ -48,7 +48,7 @@
           </figcaption>
         </figure>
         <h1>All your base are belong to us!</h1>
-        <p class="article-text">
+        <p class="text">
           All wings report in. Red Ten standing by. Red Seven standing by. Red Three 
           standing by. Red Six standing by. Red Nine standing by. Red Two standing by. 
           Red Eleven standing by
@@ -62,7 +62,7 @@
           </figcaption>
         </figure>
         <h1>Electronic embarqué!</h1>
-        <p class="article-text">
+        <p class="text">
           Didn't we just leave this party? What kept you? We ran into some old friends. 
           Is the ship all right?
         </p>
