--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Toujours plus de drône dans le ciel</h1>
         <p class="article-meta">Publié le <span class="date">10 février 2025</span> par 
           <span class="auteur">James Webb</span></p>
-        <p class="article-text">
+        <p class="text">
           Your friend is quite a mercenary. I wonder if he really cares about anything...
           or anyone. I care! So...what do you think of her, Han? I'm trying not to, kid! Good... 
           Still, she's got a lot of spirit. I don't know, what do you think? Do you think a 
