Correction nom de la classe meta

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <article>
         <h1>Toujours plus de drône dans le ciel</h1>
-        <p class="article-meta">Publié le <span class="date">10 février 2025</span> par 
+        <p class="meta">Publié le <span class="date">10 février 2025</span> par 
           <span class="auteur">James Webb</span></p>
         <p class="text">
           Your friend is quite a mercenary. I wonder if he really cares about anything...
@@ -50,7 +50,7 @@
       </article>
       <article>
         <h1>Internet, c'était mieux avant</h1>
-        <p class="article-meta">Publié le <span class="date">7 janvier 2025</span> par 
+        <p class="meta">Publié le <span class="date">7 janvier 2025</span> par 
           <span class="auteur">Arthur Poulas</span></p>
         <p class="article-text">
           Yes. Our scout ships have reached Dantooine. They found the remains of 
