--- a/article.html
+++ b/article.html
@@ -23,12 +23,12 @@
           Publié le 10 février 2025 par James Webb
         </p>
       </div>
-      <article class="article-page">
+      <article class="page">
         <figure>
           <img 
           src="img/ecran.jpg" 
           alt="Image d'un écran tactile.">
-          <figcaption class="article-figcaption">
+          <figcaption>
             Vivre connecté,365 jours par an.
           </figcaption>
         </figure>
@@ -43,7 +43,7 @@
           src="img/appareil-photo.jpg" 
           alt="Photo de matérielle de photographe."
           >
-          <figcaption class="article-figcaption">
+          <figcaption>
             The viedéographer 2.0 toolkit.
           </figcaption>
         </figure>
@@ -57,7 +57,7 @@
           <img
           src="img/electronique.jpg" 
           alt="Photo de matérielle éléctronique.">
-          <figcaption class="article-figcaption">
+          <figcaption>
             Welding for better repair.
           </figcaption>
         </figure>
